# fractint

./: pyproject.toml
fractint/: fractional_differencer.py  stationarity.py  type_aliases.py
