[project]
name = "fractint"
version = "0.1.0"
description = "Fractional integration and cointegration toolbox"
requires-python = ">=3.14"
dependencies = [
    "arch>=8.0.0",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
]

[tool.setuptools.package-data]
my_package = ["data/*"]
